login and register page

--- a/code/HandyEnglish/src/main/resources/application.properties
+++ b/code/HandyEnglish/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 
 #---===DB===---
-spring.datasource.url=jdbc:mysql://192.168.29.14:3306/HandyEnglish
+spring.datasource.url=jdbc:mysql://192.168.29.14:3306/HandyEnglish?useSSL=false
 spring.datasource.username=he_user
 spring.datasource.password=super_secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver #deprecated
+
+db.super.admin.email=5ba73291-a0d2-412f-891a-0665f99cb10f
+app.check.test.location=true
+app.start.path=/HandyEnglih/start
+app.language=polski
+#app.language=english
