add word functionality - not finished - to resolve new category creation

--- a/code/HandyEnglish/src/main/resources/application.properties
+++ b/code/HandyEnglish/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver #deprecated
 
 db.super.admin.email=5ba73291-a0d2-412f-891a-0665f99cb10f
-app.check.test.location=true
+app.check.test.location=false
 app.start.path=/HandyEnglih/start
 app.language=polski
 #app.language=english
