--- a/code/HandyEnglish/src/main/resources/application.properties
+++ b/code/HandyEnglish/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 db.super.admin.email=5ba73291-a0d2-412f-891a-0665f99cb10f
 app.check.test.location=false
-app.start.path=/HandyEnglih/start
+app.start.path=/HandyEnglish/start
 app.language=polski
 #app.language=english
