--- a/code/HandyEnglish/src/main/resources/application.properties
+++ b/code/HandyEnglish/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 #---===DB===---
-spring.datasource.url=jdbc:mysql://192.168.29.14:3306/HandyEnglish?useSSL=false
+spring.datasource.url=jdbc:mysql://192.168.29.14:3306/HandyEnglish?useSSL=false&serverTimezone=UTC
 spring.datasource.username=he_user
 spring.datasource.password=super_secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
