--- a/code/HandyEnglish/pom.xml
+++ b/code/HandyEnglish/pom.xml
@@ -12,8 +12,8 @@
 	<description>personalized english tutor</description>
 
 	<scm>
-		<connection>scm:svn:https://github.com/QweQtw/HandyEnglish.git</connection>
-		<developerConnection>scm:svn:https://github.com/QweQtw/HandyEnglish.git</developerConnection>
+		<connection>scm:git:https://QweQtw@github.com/QweQtw/HandyEnglish.git</connection>
+		<developerConnection>scm:git:https://QweQtw@github.com/QweQtw/HandyEnglish.git</developerConnection>
 		<url>https://github.com/QweQtw/HandyEnglish.git</url>
 	</scm>
 
